# ephemera

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PROPOSAL-admin-panel.md  PROPOSAL-end-to-end-encryption.md  README.md  SECURITY.md  arch_doc.md  babel.cfg  biome.json  cosmic-ray.toml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.py  stryker.config.mjs  vitest.config.js
.claude/agents/: designer.md  dev-sec.md  translator.md
.github/: dependabot.yml
.github/workflows/: _test-suite.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  lint.yml  mutation-test-js.yml  mutation-test.yml  scorecard.yml
app/: __init__.py  _test_hooks.py  admin.py  analytics.py  auth.py  cleanup.py  config.py  crypto.py  dependencies.py  errors.py  i18n.py  limiter.py  models.py  schemas.py  security_headers.py  security_log.py  validation.py  version.py
app/admin/: __init__.py  __main__.py  _core.py  cli.py  diagnostics.py  rotation.py  tokens.py  users.py
app/auth/: __init__.py  _core.py  hibp.py  lockout.py  login.py  password.py  recovery_codes.py  tokens.py  totp.py
app/models/: __init__.py  _core.py  api_tokens.py  secrets.py  users.py
app/models/migrations/: __init__.py  v2.py  v3.py  v4.py  v5.py  v6.py
app/routes/: prefs.py  receiver.py  sender.py
app/static/: analytics-toggle.js  base.css  chrome-menu.js  chrome-mode.js  chrome.css  components.css  copy.js  forms.css  gone.html  i18n.js  landing.html  lang-confirm.js  login.html  login.js  manifest.webmanifest  mask-toggle.js  responsive.css  reveal.js  sender.html  sender.js  style.css  theme.js  tokens.css  tracked.js  two-click.js
app/static/i18n/: ar.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json  zh-TW.json
app/static/sender/: dropzone.js  form.js  hints.js  status-poll.js  tracked-list.js  url-cache.js
app/static/swagger/: README.md  init.js
app/templates/: _docs.html  _layout.html  gone.html  landing.html  login.html  sender.html
app/translations/: messages.pot
app/translations/ar/LC_MESSAGES/: messages.mo  messages.po
app/translations/de/LC_MESSAGES/: messages.mo  messages.po
app/translations/es/LC_MESSAGES/: messages.mo  messages.po
app/translations/fr/LC_MESSAGES/: messages.mo  messages.po
app/translations/ja/LC_MESSAGES/: messages.mo  messages.po
app/translations/ko/LC_MESSAGES/: messages.mo  messages.po
app/translations/pt_BR/LC_MESSAGES/: messages.mo  messages.po
app/translations/ru/LC_MESSAGES/: messages.mo  messages.po
app/translations/zh_Hans/LC_MESSAGES/: messages.mo  messages.po
app/translations/zh_Hant/LC_MESSAGES/: messages.mo  messages.po
docs/: backend.md  deployment.md  frontend.md  requirements.md  threat_model.md
docs/proposals/: admin-panel.md  end-to-end-encryption.md
scripts/: crap_report.py  generate-pwa-icons.py  i18n.sh  release.sh
scripts/deploy/: deploy.sh  ephemera-deploy-entry
tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_chrome_variant.py  test_cleanup.py  test_config.py  test_crypto.py  test_fitness_functions.py  test_i18n.py  test_models.py  test_pwa.py  test_receiver.py  test_security.py  test_security_log.py  test_sender.py  test_test_hooks.py  test_validation.py
tests-e2e/: cancel.spec.js  css-cascade.spec.js  expired-secret.spec.js  image.spec.js  mobile.spec.js  passphrase.spec.js  rate-limit.spec.js  seed.py  smoke.spec.js  start.sh
tests-js/: analytics-toggle.test.js  chrome-menu.test.js  copy.test.js  dropzone.test.js  fitness-functions.test.js  helpers.js  hints.test.js  i18n.test.js  lang-confirm.test.js  login.test.js  mask-toggle.test.js  properties.test.js  reveal.test.js  sender.test.js  status-poll.test.js  theme.test.js  tracked-list.test.js  two-click.test.js
tests-js/fixtures/: README.md  analytics.js  chrome-menu.js  i18n.js  landing.js  login.js  sender.js  tracked.js
