# pyproject.toml
#
# Presently a home for tool config only -- ephemera isn't packaged as a
# distributable library, so there's no `[project]` table describing an
# installable artifact. Add one later if that ever changes.

[tool.ruff]
# 88 columns is Black's default and the prevailing width across the
# modern Python ecosystem (FastAPI, httpx, pydantic, etc.).
line-length = 88
target-version = "py312"
extend-exclude = [
  # Keep Ruff off generated / vendored / environment trees.
  "venv",
  "node_modules",
  "app/static/swagger",
]

[tool.ruff.lint]
# Rule set modelled on what FastAPI and peers ship:
#   E, W    pycodestyle (errors and warnings)
#   F       pyflakes (unused imports, undefined names, etc.)
#   I       isort (import ordering)
#   B       flake8-bugbear (common real-world anti-patterns)
#   UP      pyupgrade (suggest modern syntax for the pinned Python)
#   SIM     flake8-simplify (obvious boolean / conditional simplifications)
#   C901    mccabe cyclomatic complexity ceiling -- a tripwire for
#           functions that grow into hard-to-reason-about branchy
#           shapes. Threshold is set in [tool.ruff.lint.mccabe] below.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C901"]
ignore = [
  # E501 (line too long) is delegated to the formatter -- it handles wrapping
  # when it can, and when it can't (long URLs, long test assertions), failing
  # the lint doesn't add signal.
  "E501",
]

[tool.ruff.lint.per-file-ignores]
# Tests may intentionally keep unused variables for readability
# (e.g. `alice, bob = make_user("a"), make_user("b")` even if `bob` never
# appears later in the body). Allow F841 there without loosening it globally.
"tests/**" = ["F841"]
"tests-e2e/**" = ["F841"]

[tool.ruff.lint.mccabe]
# Cyclomatic-complexity ceiling for the C901 rule above. ruff's default
# is 10; we relax to 12 because legitimate state-machine-shaped code in
# this project (init_db, authenticate, the v3 migration, the reveal
# route) lands in the 11-12 range without being pathological. Above 12
# is a real signal that a function is doing too many things.
#
# Two functions presently sit above 12 and carry an explicit
# `# noqa: C901` annotation with a rationale:
#   - app/analytics.py::_validate_payload (19) -- registry-driven
#     validation; splitting hides complexity in helper calls without
#     reducing the cognitive load.
#   - app/routes/sender.py::create_secret (13) -- route handler that
#     gathers, validates, encrypts, persists in one linear flow;
#     splitting into helpers would obscure the request-lifecycle.
# Both are deliberate deferrals; pull the noqa and refactor when the
# function next changes shape.
max-complexity = 12

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `param: T = Depends(fn)` -- a
# function call in a default argument, which B008 flags by default.
# The values returned by these helpers are scoped per-request, so the
# usual "mutable default shared across calls" risk that B008 targets
# doesn't apply. List the FastAPI helpers here so Ruff stops flagging
# the standard pattern.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Header",
  "fastapi.Path",
  "fastapi.Body",
  "fastapi.Cookie",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Security",
]

[tool.ruff.format]
# Ruff's default format rules already match Black, which is what the
# existing code was loosely written in. No overrides needed.

[tool.coverage.run]
# Coverage data is generated on demand: CI invokes pytest with --cov;
# local runs are unaffected unless the developer opts in. The config
# here controls what gets measured, not whether it runs.
source = ["app"]
branch = true
omit = [
  "app/templates/*",       # Jinja, not Python -- extracted via babel.cfg
  "app/translations/*",    # gettext .po/.mo data files
  "app/static/swagger/*",  # vendored Swagger UI assets
]

[tool.coverage.report]
# Lines that coverage.py can't usefully reason about. Anything matching
# these patterns is excluded from the "missed" tally without needing a
# `# pragma: no cover` annotation in source.
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "\\.\\.\\.",  # bare `...` body in Protocol / ABC stubs
]
show_missing = true
precision = 1


# ---------------------------------------------------------------------------
# Mypy
#
# Runs in CI as a parallel job under .github/workflows/lint.yml against
# both `app/` and `tests/`. `app/` runs under full `strict = true`;
# `tests/` runs under the high-value strict subset
# (no_implicit_optional, warn_return_any, strict_equality,
# warn_redundant_casts, warn_unused_configs) but exempts the
# function-annotation flags (`disallow_untyped_defs`,
# `disallow_untyped_calls`, `disallow_any_generics`,
# `disallow_subclassing_any`) -- pytest test functions returning
# `None` is a low-signal annotation chore on a codebase this size
# (~860 mechanical additions for a bug class -- "test function
# silently returns wrong type" -- pytest discards anyway). If a
# future test-side type bug suggests otherwise, that exemption is
# the next ratchet step.
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
files = ["app/", "tests/"]
strict = true

# qrcode (used by app/admin/_core.py) doesn't ship type stubs and isn't
# worth chasing -- it's a CLI-only branch. Other third-party deps
# (bcrypt, itsdangerous, pyotp, sqlite3, fastapi, pydantic-settings)
# ship usable stubs and don't need overrides.
[[tool.mypy.overrides]]
module = "qrcode.*"
ignore_missing_imports = true

# Tests stay on the high-value strict subset: the four flags below are
# the ones `strict = true` adds that don't carry their weight on a
# pytest test suite. Everything else strict turns on -- including
# warn_unused_ignores, no_implicit_optional, warn_return_any,
# strict_equality -- still applies to tests.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_subclassing_any = false
# `check_untyped_defs = true` (which `strict = true` adds) starts type-
# checking the bodies of pytest test functions. The body errors that
# surface are mostly Optional-narrowing noise around `models.get_user_by_id(uid)["x"]`
# patterns where the test just created the row -- mechanical to fix
# (`assert row is not None`) but high-volume and low-signal. Mirrors
# the high-value-subset posture pinned for tests at PR #143; if a
# future test-side type bug suggests otherwise, this is the obvious
# next ratchet step.
check_untyped_defs = false
# Tests reach into module-private bindings (`app.limiter.time` under
# monkeypatch, `app.routes.prefs.models` re-export) that the strict
# `no_implicit_reexport = true` flag rejects on the consumer side
# without a `from x import y as y` shape on the producer side. Tests
# routinely need access to these attrs to monkeypatch them; relaxing
# the flag here keeps the producer modules from having to broadcast
# private bindings as public re-exports purely for the test suite.
no_implicit_reexport = false
